# opus-1.6.1-v3

./: .gitignore  CLAUDE.md  CMakeLists.txt  README  README_STEGO.md  _pdf_output.txt  silk_sources.mk
cmake/: OpusPackageVersion.cmake
doc/: algorithm.md  api_reference.md  code_organization.md  usage.md
include/: opus_defines.h  watermark.h
silk/: control.h  dec_API.c  enc_API.c  stego_pulse_matrix.c  stego_pulse_matrix.h  stego_stc.c  stego_stc.h  structs.h
silk/fixed/: encode_frame_FIX.c
silk/float/: encode_frame_FLP.c
src/: opus_decoder.c  opus_demo.c  opus_encoder.c
stego_backup/: decode_frame.c.bak  encode_frame_FIX.c.bak  encode_frame_FLP.c.bak  opus_demo.c.bak  stego_pulse_matrix.c.bak  stego_pulse_matrix.h.bak  validate_newdata.py.bak
stego_eval/: debug_stc.py  test_weights.py  test_weights_real.py  validate_lossy.py  validate_newdata.py  validate_planA.py  validate_stc_v2.py
test/: CMakeLists.txt  test_watermark.c
tools/: stego_metrics.py
watermark/: CMakeLists.txt  watermark_opus.c
